--- a/styles/scss/_fonts.scss
+++ b/styles/scss/_fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Poppins";
-  src: url("../../fonts/Poppins-Bold.woff2") format("woff2"),
-    url("../../fonts/Poppins-Bold.woff") format("woff");
+  src: url("./fonts/Poppins-Bold.woff2") format("woff2"),
+    url("./fonts/Poppins-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../../fonts/Poppins-SemiBold.woff2") format("woff2"),
-    url("../../fonts/Poppins-SemiBold.woff") format("woff");
+  src: url("./fonts/Poppins-SemiBold.woff2") format("woff2"),
+    url("./fonts/Poppins-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../../fonts/Poppins-Regular.woff2") format("woff2"),
-    url("../../fonts/Poppins-Regular.woff") format("woff");
+  src: url("./fonts/Poppins-Regular.woff2") format("woff2"),
+    url("./fonts/Poppins-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -27,16 +27,16 @@
 
 @font-face {
   font-family: "Poppins";
-  src: url("../../fonts/Poppins-Medium.woff2") format("woff2"),
-    url("../../fonts/Poppins-Medium.woff") format("woff");
+  src: url("./fonts/Poppins-Medium.woff2") format("woff2"),
+    url("./fonts/Poppins-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Lato";
-  src: url("../../fonts/Lato-Bold.woff2") format("woff2"),
-    url("../../fonts/Lato-Bold.woff") format("woff");
+  src: url("./fonts/Lato-Bold.woff2") format("woff2"),
+    url("./fonts/Lato-Bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
