--- a/styles/scss/Components/_buttons.scss
+++ b/styles/scss/Components/_buttons.scss
@@ -63,7 +63,7 @@ button {
 
   &::after {
     display: block;
-    content: url("./img/icons/blue-left-arrow.svg");
+    content: url("../img/icons/blue-left-arrow.svg");
     width: 24px;
     margin: 0 0 0 8px;
     transition: margin 0.15s linear;
